--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 	/*! 
 		Dark EcoleDirecte v3.6.1 (2020-01-04)
 		
-		Repository: https://github.com/EvanG-Styles/UserStyles/tree/master/Dark%20EcoleDirecte/ 
-					You are free to contribute or report any problems with the style.   
+		Repository: https://github.com/CustomStyles/Dark-EcoleDirecte/
+					You are free to contribute or report any problems with the style.
 		License:    https://creativecommons.org/licenses/by-sa/4.0/ 		
 	*/
 	:root {
