--- a/style.user.css
+++ b/style.user.css
@@ -3,8 +3,8 @@
 @namespace     EvanG
 @author        EvanG
 @version       3.6.1
-@homepageURL   https://github.com/EvanG-Styles/UserStyles/tree/master/Dark%20EcoleDirecte/
-@updateURL     https://raw.githubusercontent.com/EvanG-Styles/UserStyles/master/Dark%20EcoleDirecte/style.user.css
+@homepageURL   https://github.com/CustomStyles/Dark-EcoleDirecte/
+@updateURL     https://raw.githubusercontent.com/CustomStyles/Dark-EcoleDirecte/master/style.user.css
 @description   This style is designed to work on version 3.6.1 of the EcoleDirecte site, the style may no longer work correctly following updates of it.
 @license       CC-BY-SA-4.0
 @advanced text logo-invert "Color inversion rate of the establishment's logo (82 for logos with a white background)" "0"
@@ -13,7 +13,7 @@
 	/*!
 		Dark EcoleDirecte v3.6.1 (2020-01-04)
 
-		Repository: https://github.com/EvanG-Styles/UserStyles/tree/master/Dark%20EcoleDirecte/
+		Repository: https://github.com/CustomStyles/Dark-EcoleDirecte/
 					You are free to contribute or report any problems with the style.
 		License:	https://creativecommons.org/licenses/by-sa/4.0/
 	*/
