--- a/style.user.css
+++ b/style.user.css
@@ -2,7 +2,7 @@
 @name          Dark EcoleDirecte
 @namespace     EvanG
 @author        EvanG
-@version       2020.1.5
+@version       2020.1.5-2
 @homepageURL   https://github.com/CustomStyles/Dark-EcoleDirecte/
 @updateURL     https://raw.githubusercontent.com/CustomStyles/Dark-EcoleDirecte/master/style.user.css
 @description   This style is designed to work on version 3.6.1 of the EcoleDirecte site, the style may no longer work correctly following updates of it.
@@ -79,6 +79,31 @@
     .btn-default:hover,
     .open > .dropdown-toggle.btn-default {
         color: #036eae;
+    }
+
+    .ed-menu {
+        border-bottom-color: var(--light-primary-color);
+    }
+    .ed-menu-image-wrapper > div {
+        background-color: var(--light-primary-color) !important;
+    }
+    .ed-menu:not(.active) .ed-menu-image-wrapper > div::before {
+        background: var(--light-primary-color);
+    }
+    .all-badge {
+        bottom: 20px;
+        right: 0;
+    }
+    .ed-menu:not(.active) .ed-menu-badge {
+        right: 25px;
+        left: auto;
+    }
+    .ed-menu:not(.active) .ed-menu-badge {
+        background: none;
+    }
+    #menu-part:hover .ed-menu:not(.active) .all-badge .ed-menu-badge {
+        right: 45px;
+        left: auto;
     }
 
     /* Chargements */
