--- a/style.user.css
+++ b/style.user.css
@@ -2,7 +2,7 @@
 @name          Dark EcoleDirecte
 @namespace     EvanG
 @author        EvanG
-@version       2020.2.22
+@version       2020.2.26
 @homepageURL   https://github.com/CustomStyles/Dark-EcoleDirecte/
 @updateURL     https://raw.githubusercontent.com/CustomStyles/Dark-EcoleDirecte/master/style.user.css
 @description   This style is designed to work on version 3.6.1 of the EcoleDirecte site, the style may no longer work correctly following updates of it.
@@ -22,7 +22,7 @@
 ==/UserStyle== */
 @-moz-document domain("ecoledirecte.com") {
     /*!
-		Dark EcoleDirecte v3.6.1 (2020-02-22)
+		Dark EcoleDirecte v3.6.1 (2020-02-26)
 
 		Repository: https://github.com/CustomStyles/Dark-EcoleDirecte/
 					You are free to contribute or report any problems with the style.
@@ -237,6 +237,9 @@
     .table > tbody > tr:hover > td {
         background: #2f2f2f;
     }
+    .note-postit {
+        background-color: #333 !important;
+    }
 
     /* Quoi de neuf ? */
     .message-item .message-overlay {
@@ -343,6 +346,9 @@
     }
 
     /* Notes et Moyennes */
+    .eval-abs-disp strong {
+        color: #fff;
+    }
     .eleve-note .btn-encart:hover {
         background: none;
     }
