--- a/style.user.css
+++ b/style.user.css
@@ -2,7 +2,7 @@
 @name          Dark EcoleDirecte
 @namespace     EvanG
 @author        EvanG
-@version       2020.3.15
+@version       2020.3.25
 @homepageURL   https://github.com/CustomStyles/Dark-EcoleDirecte/
 @updateURL     https://raw.githubusercontent.com/CustomStyles/Dark-EcoleDirecte/master/style.user.css
 @description   This style is designed to work on version 3.6.1 of the EcoleDirecte site, the style may no longer work correctly following updates of it.
@@ -22,7 +22,7 @@
 ==/UserStyle== */
 @-moz-document domain("ecoledirecte.com") {
     /*!
-		Dark EcoleDirecte v3.6.1 (2020-03-15)
+		Dark EcoleDirecte v3.6.1 (2020-03-25)
 
 		Repository: https://github.com/CustomStyles/Dark-EcoleDirecte/
 					You are free to contribute or report any problems with the style.
@@ -79,6 +79,11 @@
     .btn-default:hover,
     .open > .dropdown-toggle.btn-default {
         color: #036eae;
+    }
+    .modal-body .table > tbody > tr > td,
+    .modal-body .table > tbody > tr > th {
+        background: #333;
+        border-color: #424242;
     }
 
     /* Menu */
@@ -377,6 +382,12 @@
     }
     .eleve-note .table.relevemoyenne th.moyennelibelle {
         display: none;
+    }
+    .eleve-note .eval-abs-disp {
+        border: 0;
+        background: 0;
+        width: 14px;
+        margin: 0;
     }
     svg rect.highcharts-background,
     svg path[fill="rgba(249, 249, 249, .85)"],
