--- a/style.user.css
+++ b/style.user.css
@@ -2,10 +2,10 @@
 @name          Dark EcoleDirecte
 @namespace     EvanG
 @author        EvanG
-@version       2020.3.25
+@version       2020.8.29
 @homepageURL   https://github.com/CustomStyles/Dark-EcoleDirecte/
 @updateURL     https://raw.githubusercontent.com/CustomStyles/Dark-EcoleDirecte/master/style.user.css
-@description   This style is designed to work on version 3.6.1 of the EcoleDirecte site, the style may no longer work correctly following updates of it.
+@description   This style is designed to work on version 3.7.1 of the EcoleDirecte site, the style may no longer work correctly following updates of it.
 @license       CC-BY-SA-4.0
 
 @advanced dropdown establishment-logo "Rendering of the establishment's logo" {
@@ -22,7 +22,7 @@
 ==/UserStyle== */
 @-moz-document domain("ecoledirecte.com") {
     /*!
-		Dark EcoleDirecte v3.6.1 (2020-03-25)
+		Dark EcoleDirecte v3.7.1 (2020-08-29)
 
 		Repository: https://github.com/CustomStyles/Dark-EcoleDirecte/
 					You are free to contribute or report any problems with the style.
@@ -412,5 +412,25 @@
     /* Cloud */
     .table .table {
         background-color: #333;
+    }
+    .table-striped > tbody > tr:nth-of-type(2n) {
+        background-color: #404040;
+    }
+    .table-striped > tbody > tr:nth-of-type(2n+1) {
+        background-color: transparent;
+    }
+    .table > tbody > tr.info > td,
+    .table > tbody > tr.info > th,
+    .table > tbody > tr > td.info,
+    .table > tbody > tr > th.info,
+    .table > tfoot > tr.info > td,
+    .table > tfoot > tr.info > th,
+    .table > tfoot > tr > td.info,
+    .table > tfoot > tr > th.info,
+    .table > thead > tr.info > td,
+    .table > thead > tr.info > th,
+    .table > thead > tr > td.info,
+    .table > thead > tr > th.info {
+        background-color: #555;
     }
 }
